syntax = "proto3";

package com.makarytskyi.grpcapi.input.reqreply.order;

import "com/makarytskyi/commonmodels/error/error.proto";
import "com/makarytskyi/commonmodels/order/aggregated_order.proto";

option java_multiple_files = true;

message GetByIdOrderRequest {
  string id = 1;
}

message GetByIdOrderResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    commonmodels.order.AggregatedOrder order = 1;
  }

  message Failure {
    string message = 100;
    oneof error {
      commonmodels.error.Error not_found = 1;
    }
  }
}
