syntax = "proto3";

package com.makarytskyi.internalapi.input.reqreply.order;

import "com/makarytskyi/internalapi/commonmodels/error/error.proto";
import "com/makarytskyi/internalapi/commonmodels/order/order.proto";
import "com/makarytskyi/internalapi/commonmodels/order/patch.proto";

option java_multiple_files = true;

message PatchOrderRequest {
  string id = 1;
  commonmodels.order.Patch patch = 2;
}

message PatchOrderResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    commonmodels.order.Order order = 1;
  }

  message Failure {
    string message = 100;
    oneof error {
      commonmodels.error.Error not_found = 1;
      commonmodels.error.Error illegal_argument = 2;
    }
  }
}
